tests/NormalTests/paczka1/fuzzy1/40950427.err
Error in line 11: D79FO6J0qQ S353 88,0
Error in line 27: 2tXUaX S353 56,9
Error in line 38: S327 A433 88,97
Error in line 8: ll3gEbV A433 79,0
